--- a/build.gradle
+++ b/build.gradle
@@ -37,5 +37,10 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+task homework_test(type: Test) {
+    useJUnitPlatform {
+        includeTags("homework")
+    }
+}
 
 
