--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,20 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+tasks.withType(Test) {
+    systemProperties(System.getProperties())
+    useJUnitPlatform()
+
+    testLogging {
+        lifecycle {
+            events "started", "skipped", "failed", "standard_error", "standard_out"
+            exceptionFormat "short"
+        }
+    }
+}
+
+
 task homework_test(type: Test) {
     useJUnitPlatform {
         includeTags("homework")
